# android-multi-controller

./: .cursor.json  .cursorrules  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.gradle.kts  settings.gradle.kts  start.sh  vcpkg.json
.cursor/rules/: project.mdc
.junie/: guidelines.md
androidServer/: build.gradle.kts
androidServer/src/main/kotlin/com/mirrordesk/androidserver/: CommandLineArgumentsParser.kt  LocalSocketServer.kt  MediaCodecVideoEncoder.kt  MiniServer.kt  ServerConfiguration.kt  VideoPacketWriter.kt
android_server/: Android.mk  Application.mk  CMakeLists.txt
android_server/jni/: Android.mk  main.cpp  server.cpp  server.h
android_server/jni/audio_capture/: audio_capture_interface.h
android_server/jni/common/: logger.h  types.h
android_server/jni/network/: tcp_server.cpp  tcp_server.h
android_server/jni/protocol/: packet_types.h  protocol_handler.cpp  protocol_handler.h
android_server/jni/screen_capture/: capture_interface.h  media_projection_capture.cpp  media_projection_capture.h  media_projection_capture_improved.cpp  media_projection_capture_improved.h
android_server/jni/video_encoder/: encoder_config.h  encoder_interface.h  mediacodec_h264_encoder.cpp  mediacodec_h264_encoder.h
composeApp/: build.gradle.kts
composeApp/src/jvmMain/kotlin/org/example/project/: App.kt  main.kt
composeApp/src/jvmMain/kotlin/org/example/project/core/stream/: DeviceVideoStreamClient.kt
composeApp/src/jvmMain/kotlin/org/example/project/di/: AppDI.kt
composeApp/src/jvmMain/kotlin/org/example/project/repositories/adb/listDevices/: AdbDevice.kt  AdbListDevicesRepository.kt  JvmAdbListDevicesRepository.kt
composeApp/src/jvmMain/kotlin/org/example/project/repositories/adb/screenRecord/: AdbScreenRecordRepository.kt  JvmAdbScreenRecordRepository.kt
composeApp/src/jvmMain/kotlin/org/example/project/repositories/adb/server/: AndroidServerRepository.kt  JvmAndroidServerRepository.kt
composeApp/src/jvmMain/kotlin/org/example/project/repositories/adb/tunnel/: AdbTunnelRepository.kt  JvmAdbTunnelRepository.kt
composeApp/src/jvmMain/kotlin/org/example/project/ui/components/: DeviceTile.kt
composeApp/src/jvmMain/kotlin/org/example/project/ui/screens/: DevicesScreen.kt
composeApp/src/jvmMain/kotlin/org/example/project/ui/theme/: MirrorDeskTheme.kt
composeApp/src/jvmMain/kotlin/org/example/project/usecase/: GetConnectedDevicesUseCase.kt
docs/: AUTO_SERVER_DEPLOYMENT.md  CLION_ANDROID_SERVER_SETUP.md  CLION_SETUP.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT_SETUP.md  DYNAMIC_PORT_ALLOCATION.md  EMPTY_SCREEN_FIX.md  GEELARK_RESULT_EXAMPLE.md  GEELARK_STYLE_IMPLEMENTATION.md  IMPLEMENTATION_ANALYSIS.md  INTELLISENSE_FIX.md  NATIVE_STREAMING_MIGRATION.md  NEXT_STEPS.md  QUICK_START_CLION.md  REDIRECT_FIX.md  SCRCPY_ANALYSIS_AND_IMPROVEMENTS.md  STREAMING_CALLBACKS_IMPLEMENTATION.md  Visão geral do pipeline.md  doc-ia.md  test.md  test2.md
gradle/: libs.versions.toml
scripts/: build.sh  setup_clion_android.sh
serverStub/: build.gradle.kts
serverStub/src/main/kotlin/com/mirrordesk/serverstub/: Main.kt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/entities/: automation_script.cpp  automation_script.h  command.cpp  command.h  device.cpp  device.h  device_status.cpp  device_status.h
src/core/interfaces/: command_executor.h  device_repository.h
src/core/logging/: CMakeLists.txt  logger.cpp  logger.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/adb/: adb_command_executor.cpp  adb_command_executor.h  adb_service.cpp  adb_service.h  screen_capture_service.cpp  screen_capture_service.h
src/infrastructure/network/: device_discovery_service.cpp  device_discovery_service.h  native_protocol_client.cpp  native_protocol_client.h  network_device_repository.cpp  network_device_repository.h
src/infrastructure/persistence/: adb_device_repository.cpp  adb_device_repository.h  device_repository_impl.cpp  device_repository_impl.h  settings_manager.cpp  settings_manager.h
src/infrastructure/streaming/: CMakeLists.txt  h264_decoder.cpp  h264_decoder.h  native_streaming_service.cpp  native_streaming_service.h  streaming_widget.cpp  streaming_widget.h  tcp_client.cpp  tcp_client.h
src/presentation/: CMakeLists.txt  main_window.cpp  main_window.h
src/presentation/qml/: ColoredSvg.qml  DeviceCard.qml  DeviceControlView.qml  LoggingBridge.qml  Style.qml  WelcomeView.qml  main.qml  qml.qrc
src/presentation/qml/components/: DeviceMirrorCard.qml  DeviceStatsCard.qml  ErrorMessageCard.qml  FeatureCard.qml  IconButton.qml  LoadingOverlay.qml  MainContentArea.qml  MultiDeviceMirrorView.qml  Sidebar.qml  SidebarHeader.qml  StatusIndicator.qml  StreamingGrid.qml
src/presentation/qml/icons/: README.md
src/presentation/view_models/: device_control_view_model.cpp  device_control_view_model.h  device_image_provider.cpp  device_image_provider.h  device_list_view_model.cpp  device_list_view_model.h  multi_device_mirror_view_model.cpp  multi_device_mirror_view_model.h
src/use_case/: CMakeLists.txt  automation_use_case.cpp  automation_use_case.h  device_control_use_case.cpp  device_control_use_case.h  device_management_use_case.cpp  device_management_use_case.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_full_workflow.cpp
tests/unit/: CMakeLists.txt  test_adb_service.cpp  test_device.cpp  test_device_management_use_case.cpp  test_device_status.cpp
